@@ -355,6 +355,7 @@ extern "C" {
 
   /** Return data associated with given exception. */
   extern dfsch_object_t* dfsch_exception_data(dfsch_object_t* e);
+  extern dfsch_object_t* dfsch_exception_stack_trace(dfsch_object_t* e);
 
   /** Call given function with escape continuation as sole argument. */
   extern dfsch_object_t* dfsch_call_ec(dfsch_object_t* proc);
